--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "react-redux": "^4.4.5",
     "react-spinner": "^0.2.6",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
-  },
-  "devDependencies": {
+    "redux-thunk": "^2.1.0",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -46,5 +44,8 @@
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1"
+  },
+  "devDependencies": {
+    
   }
 }
