--- a/package.json
+++ b/package.json
@@ -16,13 +16,22 @@
     "url": ""
   },
   "dependencies": {
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-2": "^6.11.0",
     "babel-register": "^6.11.5",
+    "babel-runtime": "^6.9.2",
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
+    "fetch-jsonp": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.0",
+    "react-autosuggest": "^4.0.0",
     "react-bootstrap": "^0.30.0",
     "react-dom": "^15.3.0",
     "react-geosuggest": "^1.24.1",
@@ -31,13 +40,6 @@
     "react-spinner": "^0.2.6",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-2": "^6.11.0",
-    "babel-runtime": "^6.9.2",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
