--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-register": "^6.11.5",
     "babel-runtime": "^6.9.2",
     "bootstrap": "^3.3.6",
+    "chart.js": "^1.1.1",
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "fetch-jsonp": "^1.0.0",
@@ -33,6 +34,7 @@
     "react": "^15.3.0",
     "react-autosuggest": "^4.0.0",
     "react-bootstrap": "^0.30.0",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.0",
     "react-geosuggest": "^1.24.1",
     "react-load-script": "0.0.2",
