--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "fetch-jsonp": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.0",
+    "react-addons-css-transition-group": "^15.3.0",
     "react-autosuggest": "^4.0.0",
     "react-bootstrap": "^0.30.0",
     "react-chartjs": "^0.8.0",
+    "react-css-transition-replace": "^1.3.0",
     "react-dom": "^15.3.0",
     "react-geosuggest": "^1.24.1",
     "react-load-script": "0.0.2",
